<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">凹凸哥</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
  
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开立即刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新</string>
    <string name="p2refresh_doing_end_refresh">加载中</string>
    <string name="p2refresh_refresh_lasttime">最近更新</string>
    <string name="tv_loading">正加载,请稍后...</string>
    <string name="no_data">网络异常...</string>

   

    
    <string name="sunday">日</string>
    <string name="monday">一</string>
    <string name="thesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    

    
</resources>
